Stylisation des tags terminée, correction composant Collapse

--- a/src/components/Collapse.scss
+++ b/src/components/Collapse.scss
@@ -26,15 +26,12 @@
   overflow: hidden;
   opacity: 0;
   transition: max-height 0.2s ease, opacity 0.2s ease;
+  margin: 0;
+  padding: 15px;
 }
 .collapse__text.open {
   max-height: 500px;
   opacity: 1;
-}
-
-.collapse__text p {
-  margin: 0;
-  padding: 15px;
 }
 
 .collapse__arrow {
